--- a/starter-code/style.css
+++ b/starter-code/style.css
@@ -1,3 +1,62 @@
-/* This is a multi-line
-comment. Add your CSS code
-from Unit 1 - 5 below  */
+body {
+	background-color: #87cefa;
+	font-family: arial, sans-serif;
+	text-align: center;
+}
+
+h1 {
+	color: rgb(2, 132, 130);
+}
+
+h2 {
+	color: #ffd700;
+}
+
+nav {
+	background-color: #808080;
+}
+
+nav a {
+	background-color: #ffbf00;
+	color: #fff;
+	padding: 35px;
+	display: block;
+	float: left;
+}
+
+nav a:hover {
+	background-color: #ee5f3c;
+}
+
+.clearfix:after {
+    visibility: hidden;
+    display: block;
+    content: " ";
+    clear: both;
+    height: 0;
+    font-size: 0;
+}
+
+.board {
+	display: inline-block;
+	height: 50%;
+	width: 50%;
+}
+
+.card {
+	height: 200px;
+	width: 150px;
+	border: 1px solid black;
+	background-color: rgba(255,255,0,1);
+	border-radius: 10px;
+	margin: 8%;
+	float: left;
+}
+
+.name {
+	color: #f00;
+}
+
+footer {
+	background-color: #808080;
+}
